fix: scrollbar on safari (hopefully)

--- a/src/static/scss/_layout.scss
+++ b/src/static/scss/_layout.scss
@@ -4,8 +4,7 @@ html,
 body {
   height: 100%;
   max-height: 100%;
-  overflow: auto;
-  overflow-x: hidden;
+  overflow: hidden;
   margin: 0;
   font-family: var(--font-sans-serif);
   background-color: var(--color-background);
@@ -17,6 +16,9 @@ body {
 body {
   display: flex;
   flex-direction: column;
+
+  overflow: auto;
+  overflow-x: hidden;
 }
 
 .content-wrapper {
